css for cool button

--- a/homework_3/photo-add.html
+++ b/homework_3/photo-add.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
+  <link rel="stylesheet" type="text/css" href="main.css">
   <title>Создать пост</title>
   </head>
 <body>
@@ -9,7 +10,9 @@
   <figure>
     <img src="pics/123.jpg" width="150" height="90" alt="логотип">
   </figure><br>
-  <a href="feed.html"><button>Вернутья в ленту</button></a><br><br>
+  <a class="button" href="feed.html">
+    Вернутья в ленту
+  </a><br><br>
   <form action="feed.html" method="post">
     <label>ваш комментарий (не обязательно)<br>
       <textarea cols="40" rows="10"></textarea>
