--- a/homework_3/feed.html
+++ b/homework_3/feed.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
+  <link rel="stylesheet" type="text/css" href="main.css">
   <title>Новостная лента</title>
 </head>
 <body>
@@ -10,7 +11,9 @@
   	<img src="pics/123.jpg" width="150" height="90" alt="логотип">
   </figure><br>
   <h2>Новостная лента!</h2>
-  <a href="photo-add.html"><button>Создать пост</button></a><br><br>
+  <a class="button" href="photo-add.html">
+    Оставить пост
+  </a><br><br>
   <div>
   	<table align="left" width="1280" height="720" border="1" cellspacing="1" cellpadding="30">
   		<tr>
