--- a/homework_3_task2/russkij.html
+++ b/homework_3_task2/russkij.html
@@ -4,6 +4,7 @@
 
 <head>
 	<meta charset="utf-8">
+	<link rel="stylesheet" type="text/css" href="main.css">
 	<title>Обучатели</title>
 </head>
 
@@ -14,9 +15,8 @@
 	<figure>
 		<img src="pics/logo.jpg" height="200" width="300" alt="Логотип">
 	</figure>
-	<a href="index.html">
-		<button>На главную
-		</button>
+	<a class="button" href="index.html">
+		На главную
 	</a><br><br>
 	<h2>
 		Обучатели - Обучим вас языкам!
