added some colors

--- a/homework_3_task2/index.html
+++ b/homework_3_task2/index.html
@@ -4,14 +4,15 @@
 
 <head>
 	<meta charset="utf-8">
+	<link rel="stylesheet" type="text/css" href="main.css">
 	<title>Обучатели</title>
 </head>
 
 <body>
-	<h1>
+	<h1 class="site_name">
 		Проект "Обучатели"
 	</h1>
-	<figure>
+	<figure class="logo">
 		<img src="pics/logo.jpg" height="200" width="300" alt="Логотип">
 	</figure><br><br>
 	<h2>
@@ -20,7 +21,7 @@
 	<h3>
 		Интересуетесь языками? Хотите получить лингвистическое образование? Тогда вам к нам!
 	</h3>
-<div>
+<div class="ssilki">
 	<ul>
 		<li>
 			<a href="english.html">Английский</a>
