--- a/homework_3_task2/polska.html
+++ b/homework_3_task2/polska.html
@@ -4,6 +4,7 @@
 
 <head>
 	<meta charset="utf-8">
+	<link rel="stylesheet" type="text/css" href="main.css">
 	<title>Educators</title>
 </head>
 
@@ -14,9 +15,8 @@
 	<figure>
 		<img src="pics/logo.jpg" height="200" width="300" alt="Логотип">
 	</figure>
-	<a href="index.html">
-		<button>Do głównej
-		</button>
+	<a class="button" href="index.html">
+		Do głównej
 	</a><br><br>
 	<h2>
 		Wychowawcy - nauczymy was języków!
@@ -24,7 +24,7 @@
 	<h3>
 		Interesujesz się językami mówionymi? Chcesz zdobyć wykształcenie lingwistyczne? Jesteś we właściwym miejscu!
 	</h3>
-<div>
+<div class="ssilki">
 	<ul>
 		<li>
 			<a href="english.html">Английский</a>
@@ -40,5 +40,70 @@
 		</li>
 	</ul>
 </div>
+<div class="obuchenie">
+<div class="zagolovok">
+	<h3>
+		Обучение в 3 этапа:
+	</h3>
+</div>
+<div class="zagolovok">
+	<h4>
+	    Лексика:
+    </h4>
+</div>
+<div class="first_stage">
+	<p>
+		Начальный этап обучения. Пополнение словарного запаса.
+	</p>
+	<p>
+		Вспомогательные ресурсы (открываются в новой вкладке):
+	</p>
+	<a href="https://www.busuu.com/ru/a/a/uchit-russkij-online" target="_blank" title="курсы Русского языка">
+		Курсы русского онлайн
+	</a><br><br>
+	<a href="https://itunes.apple.com/ru/app/%D1%80%D1%83%D1%81%D1%81%D0%BA%D0%B8%D0%B9-%D1%8F%D0%B7%D1%8B%D0%BA-%D0%B3%D1%80%D0%B0%D0%BC%D0%BE%D1%82%D0%B5%D0%B9/id1171747865?mt=8" target="_blank" title="приложение для iOS">
+	Приложение для обучения
+	</a>
+</div>
+<div class="zagolovok">
+	<h4>
+		Грамматика:
+	</h4>
+</div>
+<div class="second_stage">
+	<p>
+		Второй этап. Обучение правописанию. Синтаксис и пунктуация.
+	</p>
+	<p>
+		Вспомогательные ресурсы:
+	</p>
+	<a href="http://learnrussian.rt.com" target="_blank" title="обучающий сайт">
+		содержит около сотни уроков по русскому языку. В конце каждой небольшой группы уроков предусмотрен тест, проверяющий знания 
+	</a><br><br>
+	<a href="https://itunes.apple.com/ru/app/%D1%80%D1%83%D1%81%D1%81%D0%BA%D0%B8%D0%B9-%D1%8F%D0%B7%D1%8B%D0%BA-%D0%B3%D1%80%D0%B0%D0%BC%D0%BE%D1%82%D0%B5%D0%B9/id1171747865?mt=8" target="_blank" title="приложение для iOS">
+	Приложение для обучения
+	</a>	
+</div>
+<div class="zagolovok">
+	<h4>
+		Разговорный уровень:
+	</h4>
+</div>
+<div class="third_stage">
+	<p>
+		Последний этап обучения
+	</p>
+	<p>
+		Вспомогательные ресурсы:
+	</p>
+	<a href="https://preply.com/skype/repetitory-razgovornyi-russkii" target="_blank" title="Разговорный Русский по скайпу">
+		Сайт онлайн обучения разговорному Русскому
+	</a><br><br>
+	<a href="https://skype-language.com/courses/russkiy" target="_blank" title="Разговорный Русский по скайпу">
+		сайт аналогичный предыдущему
+	</a><br><br>
+</div>
+</div>
+<p>© Проект Обучатели, 2018</p>
 </body>
 </html>
