--- a/homework_3_task2/russkij.html
+++ b/homework_3_task2/russkij.html
@@ -9,10 +9,10 @@
 </head>
 
 <body>
-	<h1>
+	<h1 class="site_name">
 		Проект "Обучатели"
 	</h1>
-	<figure>
+	<figure class="logo">
 		<img src="pics/logo.jpg" height="200" width="300" alt="Логотип">
 	</figure>
 	<a class="button" href="index.html">
@@ -24,7 +24,7 @@
 	<h3>
 		Интересуетесь языками? Хотите получить лингвистическое образование? Тогда вам к нам!
 	</h3>
-<div>
+<div class="ssilki">
 	<ul>
 		<li>
 			<a href="english.html">Английский</a>
@@ -40,15 +40,18 @@
 		</li>
 	</ul>
 </div><br>
-<div>
+<div class="obuchenie">
+<div class="zagolovok">
 	<h3>
 		Обучение в 3 этапа:
 	</h3>
 </div>
-<div>
+<div class="zagolovok">
 	<h4>
 	    Лексика:
     </h4>
+</div>
+<div class="first_stage">
 	<p>
 		Начальный этап обучения. Пополнение словарного запаса.
 	</p>
@@ -62,10 +65,12 @@
 	Приложение для обучения
 	</a>
 </div>
-<div>
+<div class="zagolovok">
 	<h4>
 		Грамматика:
 	</h4>
+</div>
+<div class="second_stage">
 	<p>
 		Второй этап. Обучение правописанию. Синтаксис и пунктуация.
 	</p>
@@ -79,10 +84,12 @@
 	Приложение для обучения
 	</a>	
 </div>
-<div>
+<div class="zagolovok">
 	<h4>
 		Разговорный уровень:
 	</h4>
+</div>
+<div class="third_stage">
 	<p>
 		Последний этап обучения
 	</p>
@@ -95,6 +102,7 @@
 	<a href="https://skype-language.com/courses/russkiy" target="_blank" title="Разговорный Русский по скайпу">
 		сайт аналогичный предыдущему
 	</a><br><br>
+</div>
 </div>
 <p>© Проект Обучатели, 2018</p>
 </body>
