--- a/homework_3_task2/deutsch.html
+++ b/homework_3_task2/deutsch.html
@@ -58,10 +58,10 @@
 	<p>
 		Вспомогательные ресурсы (открываются в новой вкладке):
 	</p>
-	<a href="https://www.busuu.com/ru/a/a/uchit-russkij-online" target="_blank" title="курсы Русского языка">
+	<a href="https://str.by/adults/minsk/german" target="_blank" title="курсы Русского языка">
 		Курсы русского онлайн
 	</a><br><br>
-	<a href="https://itunes.apple.com/ru/app/%D1%80%D1%83%D1%81%D1%81%D0%BA%D0%B8%D0%B9-%D1%8F%D0%B7%D1%8B%D0%BA-%D0%B3%D1%80%D0%B0%D0%BC%D0%BE%D1%82%D0%B5%D0%B9/id1171747865?mt=8" target="_blank" title="приложение для iOS">
+	<a href="https://str.by/adults/minsk/german" target="_blank" title="приложение для iOS">
 	Приложение для обучения
 	</a>
 </div>
@@ -77,10 +77,10 @@
 	<p>
 		Вспомогательные ресурсы:
 	</p>
-	<a href="http://learnrussian.rt.com" target="_blank" title="обучающий сайт">
+	<a href="https://str.by/adults/minsk/german" target="_blank" title="обучающий сайт">
 		содержит около сотни уроков по русскому языку. В конце каждой небольшой группы уроков предусмотрен тест, проверяющий знания 
 	</a><br><br>
-	<a href="https://itunes.apple.com/ru/app/%D1%80%D1%83%D1%81%D1%81%D0%BA%D0%B8%D0%B9-%D1%8F%D0%B7%D1%8B%D0%BA-%D0%B3%D1%80%D0%B0%D0%BC%D0%BE%D1%82%D0%B5%D0%B9/id1171747865?mt=8" target="_blank" title="приложение для iOS">
+	<a href="https://str.by/adults/minsk/german" target="_blank" title="приложение для iOS">
 	Приложение для обучения
 	</a>	
 </div>
@@ -96,10 +96,10 @@
 	<p>
 		Вспомогательные ресурсы:
 	</p>
-	<a href="https://preply.com/skype/repetitory-razgovornyi-russkii" target="_blank" title="Разговорный Русский по скайпу">
+	<a href="https://str.by/adults/minsk/german" target="_blank" title="Разговорный Русский по скайпу">
 		Сайт онлайн обучения разговорному Русскому
 	</a><br><br>
-	<a href="https://skype-language.com/courses/russkiy" target="_blank" title="Разговорный Русский по скайпу">
+	<a href="https://str.by/adults/minsk/german" target="_blank" title="Разговорный Русский по скайпу">
 		сайт аналогичный предыдущему
 	</a><br><br>
 </div>
