bad looking tables/some css/no errors*

--- a/homework_3/feed.html
+++ b/homework_3/feed.html
@@ -1,163 +1,168 @@
 <!Doctype html>
+
 <html lang="ru">
+
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" type="text/css" href="main.css">
   <title>Новостная лента</title>
 </head>
-<body>
-	<h1>Instagram</h1>
-  <figure>
-  	<img src="pics/123.jpg" width="150" height="90" alt="логотип">
+
+
+<body class="buddy">
+  <h1 class="site_name">Instagram</h1>
+  <figure class="logo">
+    <img src="pics/123.jpg" width="150" height="90" alt="логотип">
   </figure><br>
-  <h2>Новостная лента!</h2>
   <a class="button" href="photo-add.html">
     Оставить пост
   </a><br><br>
+  <div class="feed">
   <div>
-  	<table align="left" width="1280" height="720" border="1" cellspacing="1" cellpadding="30">
-  		<tr>
-  			<td>
-  				БэдФанат
-  			</td>
-  			<td>
-  				<iframe width="800" height="500" src="https://www.youtube.com/embed/FbrUZhX_haQ" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  			</td>
-  			<td>
-  				умиляемся кинематографу <a href="feed.html">#Бэда_в_президенты</a>
-  			</td>
-  		</tr>
-  		<tr>
-  			<td>
-  				Иван не Иванов
-  			</td>
-  			<td>
-  				Здорово! так их!
-  			</td>
-  		</tr>
+    <table>
+      <tr>
+        <td>
+          БэдФанат
+        </td>
+        <td>
+          <iframe width="800" height="500" src="https://www.youtube.com/embed/FbrUZhX_haQ" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </td>
+        <td>
+          умиляемся кинематографу <a href="feed.html">#Бэда_в_президенты</a>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          Иван не Иванов
+        </td>
+        <td>
+          Здорово! так их!
+        </td>
+      </tr>
 </table>
 <form>
-	<label>
-		<textarea rows="8" cols="157" placeholder="Оставьте свой комментарий здесь!"></textarea>
-	</label>
-	<button>Оставить комментарий</button>
+  <label>
+    <textarea rows="8" cols="157" placeholder="Оставьте свой комментарий здесь!"></textarea>
+  </label>
+  <button>Оставить комментарий</button>
 </form>
 </div><br>
 <div>
-  	<table align="left" width="1280" height="720" border="1" cellspacing="1" cellpadding="50">
-  		<tr>
-  			<td>
-  				Лысый Чел
-  			</td>
-  			<td>
-  				<iframe width="800" height="500" src="https://www.youtube.com/embed/o268qbb_0BM" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  			</td>
-  			<td>
-  				рассказывает ерунду, но слушать интересно :)<a href="feed.html">#просвящаемся</a>
-  			</td>
-  		</tr>
-  		<tr>
-  			<td>
-  				Кудряш
-  			</td>
-  			<td>
-  				думаешь раз он лысеет, то умнее меня?? х(*-*)х
-  			</td>
-  		</tr>
+    <table>
+      <tr>
+        <td>
+          Лысый Чел
+        </td>
+        <td>
+          <iframe width="800" height="500" src="https://www.youtube.com/embed/o268qbb_0BM" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </td>
+        <td>
+          рассказывает ерунду, но слушать интересно :)<a href="feed.html">#просвящаемся</a>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          Кудряш
+        </td>
+        <td>
+          думаешь раз он лысеет, то умнее меня?? х(*-*)х
+        </td>
+      </tr>
 </table>
 <form>
-	<label>
-		<textarea rows="8" cols="157" placeholder="Оставьте свой комментарий здесь!"></textarea>
-	</label>
-	<button>Оставить комментарий</button>
+  <label>
+    <textarea rows="8" cols="157" placeholder="Оставьте свой комментарий здесь!"></textarea>
+  </label>
+  <button>Оставить комментарий</button>
 </form>
 </div><br>
 <div>
-  	<table align="left" width="1280" height="720" border="1" cellspacing="1" cellpadding="50">
-  		<tr>
-  			<td>
-  				idoopz
-  			</td>
-  			<td>
-  				<iframe width="800" height="500" src="https://www.youtube.com/embed/W5moUUFhmZM" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  			</td>
-  			<td>
-  				в чём разница между двумя картинками? <a href="feed.html">#непонятно</a>
-  			</td>
-  		</tr>
-  		<tr>
-  			<td>
-  				задумчивый эмоджи
-  			</td>
-  			<td>
-  				хмм....
-  			</td>
-  		</tr>
+    <table>
+      <tr>
+        <td>
+          idoopz
+        </td>
+        <td>
+          <iframe width="800" height="500" src="https://www.youtube.com/embed/W5moUUFhmZM" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </td>
+        <td>
+          в чём разница между двумя картинками? <a href="feed.html">#непонятно</a>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          задумчивый эмоджи
+        </td>
+        <td>
+          хмм....
+        </td>
+      </tr>
 </table>
 <form>
-	<label>
-		<textarea rows="8" cols="157" placeholder="Оставьте свой комментарий здесь!"></textarea>
-	</label>
-	<button>Оставить комментарий</button>
+  <label>
+    <textarea rows="8" cols="157" placeholder="Оставьте свой комментарий здесь!"></textarea>
+  </label>
+  <button>Оставить комментарий</button>
 </form>
 </div><br>
 <div>
-  	<table align="left" width="1280" height="720" border="1" cellspacing="1" cellpadding="50">
-  		<tr>
-  			<td>
-  				АнимеЧел
-  			</td>
-  			<td>
-  				<iframe width="800" height="500" src="https://www.youtube.com/embed/MqDlfqmUlcg" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  			</td>
-  			<td>
-  				крутяк <a href="feed.html">#аниме</a>
-  			</td>
-  		</tr>
-  		<tr>
-  			<td>
-  				НТВ
-  			</td>
-  			<td>
-  				А ну пошёл смотреть следаков!
-  			</td>
-  		</tr>
+    <table>
+      <tr>
+        <td>
+          АнимеЧел
+        </td>
+        <td>
+          <iframe width="800" height="500" src="https://www.youtube.com/embed/MqDlfqmUlcg" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </td>
+        <td>
+          крутяк <a href="feed.html">#аниме</a>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          НТВ
+        </td>
+        <td>
+          А ну пошёл смотреть следаков!
+        </td>
+      </tr>
 </table>
 <form>
-	<label>
-		<textarea rows="8" cols="157" placeholder="Оставьте свой комментарий здесь!"></textarea>
-	</label>
-	<button>Оставить комментарий</button>
+  <label>
+    <textarea rows="8" cols="157" placeholder="Оставьте свой комментарий здесь!"></textarea>
+  </label>
+  <button>Оставить комментарий</button>
 </form>
 </div><br>
 <div>
-  	<table align="left" width="1280" height="720" border="1" cellspacing="1" cellpadding="25">
-  		<tr>
-  			<td>
-  				Мультофаг
-  			</td>
-  			<td>
-  				<iframe width="800" height="500" src="https://www.youtube.com/embed/v3_KOGaqhdw" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  			</td>
-  			<td>
-  				играл я в паразита <a href="feed.html">#паразит</a>
-  			</td>
-  		</tr>
-  		<tr>
-  			<td>
-  				НТВ
-  			</td>
-  			<td>
-  				И ты тоже быстро пошёл! там мухтар начинается <a href="feed">#мухтар_вернулся</a>
-  			</td>
-  		</tr>
+    <table>
+      <tr>
+        <td>
+          Мультофаг
+        </td>
+        <td>
+          <iframe width="800" height="500" src="https://www.youtube.com/embed/v3_KOGaqhdw" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </td>
+        <td>
+          играл я в паразита <a href="feed.html">#паразит</a>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          НТВ
+        </td>
+        <td>
+          И ты тоже быстро пошёл! там мухтар начинается <a href="feed">#мухтар_вернулся</a>
+        </td>
+      </tr>
 </table>
 <form>
-	<label>
-		<textarea rows="8" cols="157" placeholder="Оставьте свой комментарий здесь!"></textarea>
-	</label>
-	<button>Оставить комментарий</button>
+  <label>
+    <textarea rows="8" cols="157" placeholder="Оставьте свой комментарий здесь!"></textarea>
+  </label>
+  <button>Оставить комментарий</button>
 </form>
+</div>
 </div>
 </body>
 </html>
