--- a/css-blocks_homework/cart.html
+++ b/css-blocks_homework/cart.html
@@ -14,40 +14,40 @@
 	</h1>
 <div>
 	<div class="menu">
-		Бытовая техника
+		<a href="#">Бытовая техника</a>
 		<ul class="menu_items">
-			<li>Стиральные машины</li>
-			<li>Пылесосы</li>
-			<li>Швейные, Вышивальные машины</li>
-			<li>Утюги</li>
-			<li>Электровеники</li>
-			<li>Сушилки для обуви</li>
+			<li><a href="#">Стиральные машины</a></li>
+			<li><a href="#">Пылесосы</a></li>
+			<li><a href="#">Швейные, Вышивальные машины</a></li>
+			<li><a href="#">Утюги</a></li>
+			<li><a href="#">Электровеники</a></li>
+			<li><a href="#">Сушилки для обуви</a></li>
 		</ul>
 	</div>
 	<div class="menu">
-		Техника для кухни
+		<a href="#">Техника для кухни</a>
 		<ul class="menu_items">
-			<li>Холодильники</li>
-			<li>Кухонные плиты</li>
-			<li>Морозильники</li>
-			<li>Настольные плиты</li>
-			<li>Ростеры, Мини-печи</li>
-			<li>Вытяжки</li>
-			<li>Микроволновые печи</li>
+			<li><a href="#">Холодильники</a></li>
+			<li><a href="#">Кухонные плиты</a></li>
+			<li><a href="#">Морозильники</a></li>
+			<li><a href="#">Настольные плиты</a></li>
+			<li><a href="#">Ростеры, Мини-печи</a></li>
+			<li><a href="#">Вытяжки</a></li>
+			<li><a href="#">Микроволновые печи</a></li>
 		</ul>
 	</div>
 	<div class="menu">
-		Компьютерная техника
+		<a href="#">Компьютерная техника</a>
 		<ul class="menu_items">
-			<li>Ноутбуки</li>
-			<li>Планшеты</li>
-			<li>Компьютеры, моноблоки</li>
-			<li>Игровые приставки</li>
-			<li>Серверное оборудование</li>
+			<li><a href="#">Ноутбуки</a></li>
+			<li><a href="#">Планшеты</a></li>
+			<li><a href="#">Компьютеры, моноблоки</a></li>
+			<li><a href="#">Игровые приставки</a></li>
+			<li><a href="#">Серверное оборудование</a></li>
 		</ul>
 	</div>
 	<div class="menu">
-	Корзина
+	<a href="#">Корзина</a>
     </div>
 </div>
 <div class="delivery-form">
@@ -72,7 +72,7 @@
 			<label class="decorated-text">Адрес
 			<input class="addres" type="checkbox" name="switch">
 			<div class="map">
-	                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d18805.244349902798!2d27.606083449246086!3d53.90232605969911!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46dbce44f7f73733%3A0xf0b8f452a0b9027c!2z0KLRgNCw0LrRgtC-0YDQvdGL0Lkg0LfQsNCy0L7QtA!5e0!3m2!1sru!2sby!4v1542427736151" width="600" height="450" frameborder="0" style="border:0" allowfullscreen>
+	                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d18805.244349902798!2d27.606083449246086!3d53.90232605969911!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46dbce44f7f73733%3A0xf0b8f452a0b9027c!2z0KLRgNCw0LrRgtC-0YDQvdGL0Lkg0LfQsNCy0L7QtA!5e0!3m2!1sru!2sby!4v1542427736151" width="600" height="450" style="border:0" allowfullscreen>
 	                 </iframe>
                 </div>
 		    </label>	
@@ -92,7 +92,7 @@
 		<input class="confirmation" type="checkbox" id="124" name="agreement" required>
 		<label for="124">Я прочитал и согласен с условиями доставки</label>
 		<div class="blockade"></div>
-		<button class="complete-order" action="submit">Оформить заказ</button>
+		<button class="complete-order" value="submit">Оформить заказ</button>
 	</form>
 </div>
 
