base for HM added

--- a/homework_2/index.html
+++ b/homework_2/index.html
@@ -1,36 +1,42 @@
 <!Doctype html>
 
 <html lang="ru">
+
+
 <head>
+
+  <link rel="stylesheet" type="text/css" href="stylesheets/main.css">
   <meta charset="UTF-8">
   <title>Ремонт мобильных телефонов</title>
   </head>
+
+
+
   <body>
-  <figure><img src="pics/Chiniteli.jpg" width="350" height="200" alt="логотип"></figure>
-    <div>
-      <h1>
-        Чинители inc
-      </h1>
+    <div class="header">
+  <div class="logo"><img src="pics/Chiniteli.jpg" width="150px" alt="логотип"></div>
+      <div>
+        <h1 class="site-name">Чинители inc</h1>
+      </div>
     </div>
-    <div>
+      <div class="menu">
       <ul>
-        <li>
-          <header><a href="#Наши_Услуги" title="Раздел услуг">Услуги</a></header>
+        <li class="menu-item">
+          <a href="#Наши_Услуги" title="Раздел услуг">Услуги</a>
         </li>
-        <li>
-          <header><a href="#Устройства_которые_мы_ремонтируем" title="Раздел устройств">Устройства</a>
-          </header>
+        <li class="menu-item">
+          <a href="#Устройства_которые_мы_ремонтируем" title="Раздел устройств">Устройства</a>
         </li>
-        <li>
-          <header><a href="comments.html" title="Отзывы">Отзывы</a></header>
+        <li class="menu-item">
+          <a href="comments.html" title="Отзывы">Отзывы</a>
         </li>
-        <li>
-          <header><a href="#Связаться_с_нами" title="Наши контакты">Связаться с нами</a></header>
+        <li class="menu-item">
+          <a href="#Связаться_с_нами" title="Наши контакты">Связаться с нами</a>
         </li>
       </ul>
     </div>
 
-    <div>
+    <div class="services">
       <header>Наши услуги</header>
       <ul>
         <li>Замена экрана</li>
